deploy/kubernetes/migration.temp.yaml
# [START kubernetes_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $DEPLOY_NAME
  namespace: default
  labels:
    app: $DEPLOY_NAME
spec:
  selector:
    matchLabels:
      app: $DEPLOY_NAME
  template:
    metadata:
      annotations:
        admission.datadoghq.com/enabled: "false"
        ad.datadoghq.com/$DEPLOY_NAME.tags: >-
          {
            "env":"$ENVIRONMENT_NAME"
          }
        ad.datadoghq.com/$DEPLOY_NAME.logs: >-
          [{
            "source":"$PROJECT_SLUG",
            "service":"$PROJECT_SLUG-web-migration"
          }]
      labels:
        app: $DEPLOY_NAME
    spec:
      imagePullSecrets:
        - name: $PROJECT_SLUG-docker
      containers:
        - name: $DEPLOY_NAME
          image: $DOCKER_IMAGE:$VERSION
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo 'migration pod alive'; sleep 10;done"]
          securityContext:
            privileged: true
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "300Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
