deploy/kubernetes/worker.yaml
# [START kubernetes_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $PROJECT_SLUG-$ENVIRONMENT_NAME-worker
  namespace: default
  labels:
    app: $PROJECT_SLUG-$ENVIRONMENT_NAME-worker
    tags.datadoghq.com/env: $ENVIRONMENT_NAME
spec:
  selector:
    matchLabels:
      app: $PROJECT_SLUG-$ENVIRONMENT_NAME-worker
  template:
    metadata:
      annotations:
        admission.datadoghq.com/enabled: "false"
        ad.datadoghq.com/$PROJECT_SLUG-$ENVIRONMENT_NAME-worker.tags: >-
          {
            "env":"$ENVIRONMENT_NAME"
          }
        ad.datadoghq.com/$PROJECT_SLUG-$ENVIRONMENT_NAME-worker.logs: >-
          [{
            "source":"$PROJECT_SLUG",
            "service":"$PROJECT_SLUG-worker"
          }]
      labels:
        app: $PROJECT_SLUG-$ENVIRONMENT_NAME-worker
        tags.datadoghq.com/env: $ENVIRONMENT_NAME
    spec:
      imagePullSecrets:
        - name: $PROJECT_SLUG-docker
      containers:
        - name: $PROJECT_SLUG-$ENVIRONMENT_NAME-worker
          image: $DOCKER_IMAGE:$VERSION
          command: ["/bin/sh"]
          args: ["-c", "celery -A root worker -l info"]
          resources:
            requests:
              memory: "600Mi"
              cpu: "500m"
            limits:
              memory: "800Mi"
              cpu: "1000m"
          readinessProbe:
            exec:
              command:
                - bash
                - -c
                - "DJANGO_SETTINGS_MODULE=root.$ENVIRONMENT_NAME.worker_ping celery -A root inspect ping -d celery@$HOSTNAME --timeout=10"
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 80
              name: http
