deploy/kubernetes/services.production.yaml
# [START LoadBalancer]
apiVersion: v1
kind: Service
metadata:
  name: $PROJECT_SLUG-$ENVIRONMENT_NAME-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
  labels:
    app: $PROJECT_SLUG-$ENVIRONMENT_NAME-web
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
      name: https
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: $PROJECT_SLUG-$ENVIRONMENT_NAME-web

---
apiVersion: v1
kind: Service
metadata:
  name: $PROJECT_SLUG-$ENVIRONMENT_NAME-admin-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
  labels:
    app: $PROJECT_SLUG-$ENVIRONMENT_NAME-admin
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
      name: https
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: $PROJECT_SLUG-$ENVIRONMENT_NAME-admin

---

apiVersion: v1
kind: Service
metadata:
  name: $PROJECT_SLUG-$ENVIRONMENT_NAME-monitor-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
  labels:
    app: $PROJECT_SLUG-$ENVIRONMENT_NAME-monitor
spec:
  ports:
    - port: 80
      targetPort: 5555
  selector:
    app: $PROJECT_SLUG-$ENVIRONMENT_NAME-monitor

---

# [END LoadBalancer]
